--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>passdec</title><link href=/static/css/app.222b0a696450614721566e348d6518bc.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.ba88bf19fdf8aee92b4e.js></script><script type=text/javascript src=/static/js/vendor.f06f5a65e22092e65e6f.js></script><script type=text/javascript src=/static/js/app.8edc858632b5258a8fb5.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <title>passdec</title>
+    <link href=./static/css/app.222b0a696450614721566e348d6518bc.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=./static/js/manifest.ba88bf19fdf8aee92b4e.js></script>
+    <script type=text/javascript src=./static/js/vendor.f06f5a65e22092e65e6f.js></script>
+    <script type=text/javascript src=./static/js/app.8edc858632b5258a8fb5.js></script>
+</body>
+
+</html>
